[gd_scene load_steps=4 format=3 uid="uid://bgukh7keafv8t"]

[ext_resource type="Texture2D" uid="uid://cgqwjhuwj724q" path="res://icon.svg" id="1_gl8g6"]
[ext_resource type="Script" uid="uid://dt5i4kf806ina" path="res://scripts/item_sparkle.gd" id="1_pnip5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pnip5"]
radius = 16.0312

[node name="ItemSparkle" type="Area2D"]
monitorable = false
script = ExtResource("1_pnip5")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_gl8g6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pnip5")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
